# Top-down-parser

./: .gitignore  Postfix.cabal  README.md  input.txt
.stack-work/install/x86_64-linux-ncurses6/lts-8.0/8.0.2/flag-cache/: Postfix-0.1.0.0-6XIhAYEjzBiCUPzEOtOv61
.stack-work/install/x86_64-linux-ncurses6/lts-8.0/8.0.2/pkgdb/: Postfix-0.1.0.0-6XIhAYEjzBiCUPzEOtOv61.conf  package.cache
app/: .Main.hs.swp  Main.hs
src/: Lexer.hs  Lib.hs  Parser.hs  Visualizer.hs
