name:                Postfix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Postfix#readme
license:             BSD3
license-file:        LICENSE
author:              Uladzislau Padtsiolkin
maintainer:          example@example.com
copyright:           2017 vlad107
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Parser
                     , Visualizer
  build-depends:       base >= 4.7 && < 5, graphviz, containers, fgl, text
  default-language:    Haskell2010

executable Postfix-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-tabs
  build-depends:       base, text
                     , Postfix
  default-language:    Haskell2010

test-suite Postfix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Postfix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Postfix

